app/src/main/java/com/example/mviexample/data/error/ErrorHandler.kt
package com.example.mviexample.data.error

interface ErrorHandler {
    fun getErrorDescription(throwable: Throwable): String
}